--- a/audiovideo.html
+++ b/audiovideo.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="jamalerma.html">jamaler ma</a></li>
+                <li><a href="audiovideo.html">audio.video</a></li>
+                <li><a href="jamalerma.html">table</a></li>
+                <li><a href="tablee.html">table</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>explore html5</h1>
     <audio src="./Malkauns - Aditya Verma.mp3" controls></audio>
     <video src="./Aap_Jo_Iss_Tarah_Se_Tadpayenge___School_Life_Love_Story_2018___Heart_Broken_Love.mp4" controls></video>
