--- a/home.html
+++ b/home.html
@@ -8,10 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Welcome to my home</h1>
     <header>
         <nav>
             <ul>
-                <li><a href="tablee.html"></a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="jamalerma.html">jamaler ma</a></li>
+                <li><a href="audiovideo.html">audio.video</a></li>
+                <li><a href="jamalerma.html">table</a></li>
+                <li><a href="tablee.html">table</a></li>
+                <li><a href="aboutus.html">About us</a></li>
             </ul>
         </nav>
     </header>
