--- a/jamalerma.html
+++ b/jamalerma.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="jamalerma.html">jamaler ma</a></li>
+                <li><a href="audiovideo.html">audio.video</a></li>
+                <li><a href="jamalerma.html">table</a></li>
+                <li><a href="tablee.html">table</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
     <form action="#">
     <h1>Jamaler ma special TSC pitha expo</h1>
     <p><input type="email" placeholder="text your email"></p>
