--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="jamalerma.html">jamaler ma</a></li>
+                <li><a href="audiovideo.html">audio.video</a></li>
+                <li><a href="jamalerma.html">table</a></li>
+                <li><a href="tablee.html">table</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
    <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cum placeat, quibusdam laborum explicabo molestias illo, omnis architecto deleniti laudantium dignissimos? Expedita, necessitatibus unde voluptates, officia laudantium voluptate, nemo repellat temporibus repellendus minima qui! Aliquid reiciendis sequi impedit ullam perspiciatis tenetur dolor itaque modi! Obcaecati deleniti velit nulla perspiciatis, distinctio dolore odit porro aliquam. Dolores fugit accusamus debitis similique incidunt numquam molestias cum atque itaque perspiciatis officiis voluptate quisquam aspernatur ab beatae ipsum voluptates sapiente sequi sint eius earum nostrum, nulla ullam repudiandae. Beatae ducimus culpa unde nulla repudiandae, consectetur ullam aliquam nihil sequi quae nemo magni enim consequatur fuga voluptatum laudantium optio. Praesentium blanditiis sapiente officia nesciunt officiis deleniti maxime nam, laborum veritatis dolorem distinctio quo exercitationem harum cupiditate ipsam, veniam necessitatibus. Illo sequi similique tenetur culpa sint ut exercitationem, quisquam in, odio voluptatem molestiae et quod quos consequuntur magni sit itaque, earum perferendis distinctio? Facere distinctio dicta voluptatibus iste ducimus quas hic? Rem, libero beatae, repellendus sunt, dolore modi ullam reiciendis eaque vitae hic quaerat rerum dolorum! Eligendi nihil tempora placeat ea porro similique facere corporis earum id excepturi, ad maiores voluptates dolore cupiditate molestiae voluptate provident nisi sapiente architecto animi. Necessitatibus nesciunt dolorum eum odit blanditiis nostrum suscipit accusamus similique. Cumque aliquid magnam sunt dolor dolorem eius molestiae aut maiores error ullam id, asperiores pariatur officiis at nostrum reiciendis. Magni assumenda distinctio sed doloremque minus, libero quidem. Itaque expedita libero voluptatum eaque quisquam veniam aliquid fugit aut dolore eveniet cum at assumenda provident nobis, nam nemo, tempora distinctio nisi quibusdam, id dolorem? Nobis magnam asperiores laboriosam commodi, quod iste ad animi officia rem nostrum libero delectus maxime repellendus perspiciatis. Enim similique perferendis recusandae velit corporis? Labore reiciendis itaque quo possimus vitae? Placeat, quaerat provident sint ratione eveniet eos, possimus ab, exercitationem sequi vitae laboriosam corporis excepturi. Qui!</h4> 
 </body>
 </html>
